# ubuntu_utils

./: .env  .env.template  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .releaserc  CHANGELOG.md  Dockerfile  Dockerfile-template  MANIFEST.in  README.rst  commands.py  compose-template.yml  compose.py  compose.yml  configs.yaml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  time_sync  tox.ini  up.sh  vars.json
.compose/: Dockerfile  compose.py
.github/actions/commit/: action.yml
.github/actions/setup-test-env/: action.yml
.github/scripts/: update_version.py
.github/workflows/: commitlint.yml  lint.yml  pre-commit.yml  pypi.yml  release.yml  test.yml
.husky/: pre-commit
docs/source/: conf.py  index.rst
framework/: __init__.py  instances.py  root_process.py  run_command.py  utils.py
resources/: 01-network-manager-all_original.yaml  daemon.json
scripts/: __init__.py  build-efi  build-efi.py  build_and_upload_to_pypi  c-m-part  c-m-part.py  ch-grub-menu  chswap  chswap.py  container_pycharm  container_vscode  enable-hibernate  enable-hibernate.py  free-space  free-space.py  git_init  install_dep  myshlib  pipeline  push_to_github  resize-part  resize-part.py  shortcut  shortcut.py  test  xz-docker  xz-docker.py
scripts/docs/: init_docs  make_html  make_po
scripts/lib/: container_up  htmlcov_link.py
src/: commands.py  main.py  requirements.txt  run_user_process.py  up.sh
src/.compose/: Dockerfile  compose.yml
src/framework/: check.py  configs.py  execution_recorder.py  find_port.py  instances.py  root_process.py  ubuntu_utils_network.py  user_process.py  utils.py
src/resources/: 01-network-manager-all.yaml  daemon.json
src/scripts/: __init__.py  build-efi.py  c-m-part.py  ch-grub-menu.py  enable-hibernate  enable-hibernate.py  m-part  m-part.py  myshlib  resize-part  resize-part.py  shortcut.py  xz-docker.py
src/tests/: __init__.py  test_execution_recorder.py  test_instances.py  test_root_process.py  test_scripts.py
tests/: Dockerfile  conftest.py  copy_project.py  test_duplicate_check.py  test_execution_recorder.py  test_instances.py  test_main.py  test_process.py  test_remote.py  test_run_command.py  test_ssh.py  test_utils.py
tests/resources/: commands.py  commands2.py  grub  grub-modified
tests/test_scripts/: test_get_docker_file.py
ubuntu_utils/: commands.py  configs.template.py  copy_project.py  file_server.py  get_apt_packages.json  get_apt_packages.py  main.py  run.py  run.sh
ubuntu_utils/framework/: duplicate_check.py  execution_recorder.py  process.py  remote.py  settings.py  ssh.py  utils.py
ubuntu_utils/framework/lib/: file_utils.py  network_utils.py  other_utils.py  serialization_utils.py
ubuntu_utils/resources/: 01-network-manager-all.yaml  apt-offline_1.8.6-1_all.deb  custom-resources.yaml  daemon.json  kubeadm-config.yaml
ubuntu_utils/scripts/: apt-offline-sh  build-efi  c-m-part  ch-grub-menu  chswap  chtext  enable-hibernate  free-space  get-cert  get_docker_file  init.py  m-part  myshlib  resize-part  shortcut  xz-docker
ubuntu_utils/scripts/lib/: get_docker_file.py  init.py  myshlib
